PROJECT(IGCoupled)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0048 NEW)
SET(CPACK_PACKAGE_VERSION_MAJOR “1”)
SET(CPACK_PACKAGE_VERSION_MINOR “0”)
SET(CPACK_PACKAGE_VERSION_PATCH “1”)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-std=c++17 -fPIC")
set(CMAKE_CXX_COMPILE "g++")
set(CMAKE_C_COMPILE "gcc")
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/Eigen)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/Ceres)
IF(WIN32)
    include_directories(${PROJECT_SOURCE_DIR}/windows)
ENDIF()

add_subdirectory(src)
add_subdirectory(exe)
